add comments to orders/_list_order.html.erb & orders/show.html.erb

--- a/app/views/orders/_list_order.html.erb
+++ b/app/views/orders/_list_order.html.erb
@@ -1,3 +1,8 @@
+<!-- 
+- Partials for show.html.erb
+- This will be use for UI change in order details page
+-->
+
 <tr>  
   <td>
     <%= image_tag product.image.tiny %>
