--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,3 +1,12 @@
+<!-- 
+- UI Change for Order Details Page
+- The order details page will have:
+  - the image, name, description of the product
+  - their respective quatities and the line item totals
+  - the final amount for the order
+  - the email was used
+-->
+
 <section class="orders-show">
 
   <header class="page-header">
@@ -18,6 +27,7 @@
               <th>Price</th>
           </tr>
         </thead>
+        
         <tbody>
           <% @order.line_items.each do |item| %>
             <%= render "list_order", product: item.product, qty: item.quantity %>
@@ -33,7 +43,6 @@
           </tr>
         </tbody>
       </table>
-
     </div>
 
     <div>
