--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -5,18 +5,28 @@
 
 <section class="admin-dashboard-show">
   <header>
-    <h1>Dashboard - Check Detailed Information of Products</h1>
+    <h1>Dashboard</h1>
   </header>
 
   <div class="row">
-    <div class="card dashboard col-sm-6 text-center">
+    <div class="card dashboard col-lg-10 text-truncate">
       <div class="card-header">
         <h3>Products</h4>
       </div>
       <div class="card-body">
-        <p>Inventory of Each Products</p>
-        <p class="value"><%= @total_products %></p>
-        
+        <p>Total Counts of Products</p>
+        <p class="value"><%= @total_counts_products %></p>
+      </div>
+    </div>
+
+    <div class="card dashboard col-lg-10 text-truncate">
+      <div class="card-header">
+        <h3>Categories</h3>
+      </div>
+      <div class="card-body">
+        <p>Total Counts of Categories</p>
+        <p class="value"><%= @total_counts_categories %></p>
+      </div>
     </div>
   </div>
 </section>
