--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -14,6 +14,10 @@
         <li>
           <%= link_to 'Home', :root %>
         </li>
+        <li>
+          <%# Add the About Page %>
+          <%= link_to 'About', about_path %>
+        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Categories
