complete the implementation of admin categories - work as expected

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,6 +1,4 @@
-<%# <h1>Admin::Categories#index</h1>
-<p>Find me in app/views/admin/categories/index.html.erb</p> %>
-
+<%# Render the table for Categories Page  %>
 
 <section class="admin-categories-index">
 
